[tool.poetry]
name = "repl_python3_Graph"
version = "0.1.0"
description = ""
authors = ["DoniTrump <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
panda = "^0.3.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
